#
# Makefile.am
#
# (C) 2009 Nextworks SRL
#
# Written by: Francesco Salvestrini <f DOT salvestrini AT nextworks DOT it>
#

ACLOCAL_AMFLAGS = -I m4 --install

EXTRA_DIST     =
DISTCLEANFILES =
BUILT_SOURCES  =

include $(top_srcdir)/Makefile.admin

EXTRA_DIST +=					\
	LICENSE					\
	NEWS					\
	README					\
	bootstrap

MAINTAINERCLEANFILES = builder
