include ../../../Make.vars

SUBDIRS = t

EXTRA_DIST =			\
	meta.json			\
	__init__.py			\
	packetdump.py		\
	pyswitch.py			\
	pyloop.py			\
	monitor.py			\
	countdown.py		\
	dnsspy.py			\
	core_manager.py		\
	discovery_packet.py	\
	service_bod.py		\
	flows_monitor.py

NOX_RUNTIMEFILES =		\
	meta.json			\
	__init__.py			\
	packetdump.py		\
	pyswitch.py			\
	pyloop.py			\
	monitor.py			\
	countdown.py		\
	dnsspy.py			\
	core_manager.py		\
	discovery_packet.py	\
	service_bod.py		\
	flows_monitor.py

all-local: nox-all-local
install-exec-hook: nox-install-local
